# rustdesk-light

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md  docker-compose.yml
.cargo/: config.toml
.codex/skills/rust-desk-light-feature/: SKILL.md
.github/workflows/: build-mipsel.yml  release.yml
assets/i18n/: zh-CN.toml
config/: admin.toml  client.template.toml  client.toml  server.toml
crates/admin/: Cargo.toml  build.rs
crates/admin/src/: app.rs  command_menu.rs  i18n.rs  main.rs  runtime.rs  session.rs  theme.rs
crates/admin/src/app/: about.rs  audio_udp.rs  client_builder.rs  client_groups.rs  client_map.rs  client_registry.rs  client_state.rs  client_table.rs  command_result.rs  event.rs  file_transfer.rs  network.rs  payload.rs  settings.rs  status_bar.rs  terminal.rs  toast.rs  ui.rs  video_pipeline.rs  window_dispatch.rs
crates/admin/src/app/client_map/: world_map_data.rs
crates/admin/src/app/command_result/: registry.rs
crates/admin/src/execute/: command_preset.rs  command_window.rs  create_task.rs  execute_code.rs  execute_file.rs  execute_static_command.rs  mod.rs  result.rs  ui.rs
crates/admin/src/live_control/: audio_listen.rs  camera.rs  mod.rs  remote_desktop.rs  tile_frame.rs
crates/admin/src/remote_management/: file_manager.rs  remote_terminal.rs  reverse_proxy.rs
crates/admin/src/session/: mod.rs
crates/admin/src/tools/: mod.rs  p2p_test.rs
crates/admin/src/user_interaction/: balloon_tip.rs  command_window.rs  message_box.rs  mod.rs  open_text_in_notepad.rs  text_chat.rs  voice_chat.rs
crates/client/: Cargo.toml  build.rs
crates/client/macos/: Info.plist
crates/client/src/: app.rs  app_event.rs  app_ui.rs  audio_stream.rs  capabilities.rs  cli_main.rs  client_network.rs  commands.rs  entry.rs  live_video_stream.rs  main.rs  outbound.rs  payload.rs  runtime.rs  session.rs  stream_state.rs  support.rs  text_decode.rs  windowing.rs
crates/client/src/capabilities/: remote_management.rs  support.rs  system_info.rs  user_interaction.rs
crates/client/src/execute/: command_preset.rs  create_task.rs  execute_code.rs  execute_file.rs  execute_static_command.rs  mod.rs  shared.rs
crates/client/src/live_control/: audio_listen.rs  audio_stream.rs  camera.rs  live_video_stream.rs  mod.rs  payload.rs  realtime_video.rs  remote_desktop.rs  tile_diff.rs
crates/client/src/live_control/camera/: linux.rs  macos.rs  windows.rs
crates/client/src/live_control/camera/linux/: v4l2.rs
crates/client/src/live_control/remote_desktop/: linux.rs  macos.rs  windows.rs
crates/client/src/remote_management/: client_autostart.rs  client_service.rs  file_manager.rs  mod.rs  registry_manager.rs  remote_terminal.rs  reverse_proxy.rs
crates/client/src/session/: mod.rs
crates/client/src/tools/: mod.rs  p2p.rs
crates/client/src/user_interaction/: balloon_tip.rs  message_box.rs  mod.rs  open_text_in_notepad.rs  payload.rs  platform.rs  text_chat.rs  voice_chat.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: audio_udp_relay.rs  geoip.rs  main.rs  peer_writer.rs  realtime_video.rs
crates/version/: Cargo.toml  build.rs
crates/version/src/: lib.rs
docs/: geolite2-city-setup.md
scripts/: docker-entrypoint.sh  geoip-db.sh  macos-adhoc-sign-after-link.sh  package-apps.ps1  package-apps.sh  server-up.sh  smoke-test.bat  smoke-test.sh  start-dev.bat  start-dev.sh  start-server-release.sh
