[workspace]
members = [
    "crates/assets",
    "crates/config",
    "crates/protocol",
    "crates/version",
    "crates/server",
    "crates/client",
    "crates/admin",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["rust-desk-light contributors"]
license = "Apache-2.0"
repository = "https://local/rust-desk-light"
