[workspace]
members = [
    "crates/assets",
    "crates/config",
    "crates/protocol",
    "crates/version",
    "crates/server",
    "crates/client",
    "crates/admin",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.8.1"
authors = ["marlkiller <marlkiller369@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/marlkiller/rust-desk-light"

[profile.release-size]
inherits = "release"
opt-level = "z"
strip = "symbols"
lto = true
codegen-units = 1
