[package]
name = "rust-desk-light-admin"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "rdl-admin"
path = "src/main.rs"

[dependencies]
eframe = "0.34.2"
rust-desk-light-protocol = { path = "../protocol" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSWindow"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std"] }
