[package]
name = "rust-desk-light-admin"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rdl-admin-gui"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
cpal = "0.15.3"
eframe = "0.34.2"
egui_extras = { version = "0.34.2", default-features = false }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
rfd = "0.15.4"
rust-desk-light-assets = { path = "../assets" }
rust-desk-light-config = { path = "../config" }
rust-desk-light-protocol = { path = "../protocol" }
rust-desk-light-version = { path = "../version" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSWindow"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std"] }
