[package]
name = "rust-desk-light-client"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "rdl-client"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
eframe = "0.34.2"
rust-desk-light-protocol = { path = "../protocol" }

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
image = { version = "0.25.10", default-features = false, features = ["jpeg"] }

[target.'cfg(target_os = "windows")'.dependencies]
nokhwa = { version = "0.10.10", default-features = true, features = ["input-msmf"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23.2"
nokhwa = { version = "0.10.10", default-features = true, features = ["input-avfoundation"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSWindow"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std"] }
