[package]
name = "rust-desk-light-server"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "rdl-server"
path = "src/main.rs"

[dependencies]
rust-desk-light-protocol = { path = "../protocol" }
rust-desk-light-version = { path = "../version" }
